--- a/Assignment1/report/report.tex
+++ b/Assignment1/report/report.tex
@@ -30,7 +30,7 @@ We choose the first strategy mainly for performance. Accessing elements and remo
 
 We tested both the division, plus and modulo with priorities and the j-- program.
 
-For the operators we used first basic tests (e.g. "4 / 2" or "4 mod 5") and then we tested the priorities (e.g. "3 + 4 / 5").
+For the operators we used first basic tests (e.g. "4 / 2" or "4 mod 5") and then we tested the priorities (e.g. "3 + 4 / 5"). We obviously tested the division by zero also.
 
 We used another strategy for the j-- program. We mainly tested the extreme values : "What happen if we put negative numbers ?". We tested for values like 0, 1 (intialized at 1) and 2.
 
