Correction orth rapport

--- a/Assignment1/report/addition/addition-report.tex
+++ b/Assignment1/report/addition/addition-report.tex
@@ -9,6 +9,6 @@
 
 \section{More about development}
 
-In addition to the division, plus and modulo operators when had to implement the less one. We needed this operator for the \emph{primes.java} program. The interesting thing about this operator was that we had to be carefull about the scanner. Because a \emph{<} symbol can be followed by another \emph{<} or a \emph{=} symbol for instance. This was easily resolved by a \emph{if ... else ...} bloc.
+In addition to the division, plus and modulo operators when had to implement the less one. We needed this operator for the \emph{primes.java} program. The interesting thing about this operator was that we had to be carefull about the scanner. Because a \emph{<} symbol can be followed by another \emph{<} or a \emph{=} symbol for instance. This was easily resolved by a \emph{if ... else ...} block.
 
 \end{document}
